<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/displaySingle_scroll" android:layout_width="match_parent"
	android:layout_height="match_parent">
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent" android:layout_height="match_parent"
		android:orientation="vertical">

		<TextView
		    android:id="@+id/textView1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/beer_name_str"
		    android:textAppearance="?android:attr/textAppearanceMedium" />

		<EditText android:id="@+id/insertLayout_name_edit"
			android:layout_height="wrap_content" android:layout_width="fill_parent" />

		<TextView
		    android:id="@+id/textView2"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/abv_str"
		    android:textAppearance="?android:attr/textAppearanceMedium" />

		<EditText android:id="@+id/insertLayout_abv_edit"
			android:layout_height="wrap_content" android:layout_width="fill_parent" />

		<TextView
		    android:id="@+id/textView3"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/description_str"
		    android:textAppearance="?android:attr/textAppearanceMedium" />

		<EditText android:id="@+id/insertLayout_descript_edit"
			android:layout_height="wrap_content" android:layout_width="fill_parent" />

		<TextView
		    android:id="@+id/textView4"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/brewery_name_str"
		    android:textAppearance="?android:attr/textAppearanceMedium" />

		<EditText
		    android:id="@+id/brewery_edit_text"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content" >

		    <requestFocus />
		</EditText>

		<Button
		    android:id="@+id/edit_brewery_btn"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:text="@string/edit_brewery_str" />

		<Button
		    android:id="@+id/insertLayout_saveButton"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginBottom="2dip"
		    android:layout_marginTop="5dip"
		    android:text="@string/store_new_beer_str" />

	</LinearLayout>

</ScrollView>