<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brewery_name_str"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/find_brewery_layout_brewery_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/search_breweries_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_str" />

    <TextView
        android:id="@+id/results_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/results_str"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/brewery_results_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    </ListView>

</LinearLayout>